syntax = "proto3";

package ai.lzy.v1.storage;

import "ai/lzy/v1/common/storage.proto";
import "ai/lzy/v1/long-running/operation.proto";
import "ai/lzy/v1/long-running/option.proto";

option java_outer_classname = "LSS";
option java_package = "ai.lzy.v1.storage";

service LzyStorageService {
  rpc CreateStorage (CreateStorageRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      response: "CreateStorageResponse"
    };
  }

  rpc DeleteStorage (DeleteStorageRequest) returns (DeleteStorageResponse);

  rpc GetStorageCredentials (GetStorageCredentialsRequest) returns (GetStorageCredentialsResponse);
}

message CreateStorageRequest {
  string userId = 1;
  string bucket = 2;
  // TODO: size limit, ttl and other settings
}

message CreateStorageResponse {
  oneof credentials {
    ai.lzy.v1.common.S3Credentials s3 = 1;
    ai.lzy.v1.common.AzureBlobStorageCredentials azure = 2;
  }
}

message DeleteStorageRequest {
  string bucket = 1;
}

message DeleteStorageResponse {
}

message GetStorageCredentialsRequest {
  string userId = 1;
  string bucket = 2;
}

message GetStorageCredentialsResponse {
  oneof credentials {
    ai.lzy.v1.common.S3Credentials amazon = 1;
    ai.lzy.v1.common.AzureBlobStorageCredentials azure = 2;
  }
}
